--- a/_products/.md
+++ b/_products/.md
@@ -1,5 +1,6 @@
 ---
-{}
+title: Teinture à l’huile CBD cbdMD + MÉLATONINE - Menthe - CBD 500mg / 30mL
 
 ---
 
+![2019-09-00-662213.png](https://remijeanetienne.github.io/weedy/assets/2019-09-00-662213.png)
